CMM编译器/CmmJavacc/src/Compiler/Compiler.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Compiler.java */
package Compiler;

import java.io.FileInputStream;
import java.io.FileOutputStream;
import java.io.InputStream;
import java.util.ArrayList;

public class Compiler/*@bgen(jjtree)*/implements CompilerTreeConstants, CompilerConstants {/*@bgen(jjtree)*/
  protected static JJTCompilerState jjtree = new JJTCompilerState();static SymbolTable table = new SymbolTable();
    static int level = 0;
  public static void main(String args [])
  {
    try {
            InputStream inputstream = new FileInputStream("src\u005c\u005cCompiler\u005c\u005ctest.txt");
            Compiler complier = new Compiler(inputstream);
            SimpleNode node =complier.start();
            node.dump(" ");
    }
    catch (Exception e){
                 //System.err.println(e);
                 e.printStackTrace();
    }
  }

/*语法规则*/
  static final public SimpleNode start() throws ParseException {
                     /*@bgen(jjtree) start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      procedure();
      jj_consume_token(0);
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
          {if (true) return jjtn000;}
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void procedure() throws ParseException {
                   /*@bgen(jjtree) procedure */
  SimpleNode jjtn000 = new SimpleNode(JJTPROCEDURE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      label_1:
      while (true) {
        if (jj_2_1(3)) {
          ;
        } else {
          break label_1;
        }
        Statement();
      }
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void Statement() throws ParseException {
                   /*@bgen(jjtree) Statement */
  SimpleNode jjtn000 = new SimpleNode(JJTSTATEMENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_2(3)) {
        IfStmt();
      } else if (jj_2_3(3)) {
        WhileStmt();
      } else if (jj_2_4(3)) {
        DoWhileStmt();
      } else if (jj_2_5(3)) {
        ForStmt();
      } else if (jj_2_6(3)) {
        DeclareStmt();
      } else if (jj_2_7(3)) {
        AssignStmt();
        jj_consume_token(SEMI);
      } else if (jj_2_8(3)) {
        BlockStmt();
      } else if (jj_2_9(3)) {
        ReadStmt();
      } else if (jj_2_10(3)) {
        WriteStmt();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
                   if (jjtc000) {
                     jjtree.clearNodeScope(jjtn000);
                     jjtc000 = false;
                   } else {
                     jjtree.popNode();
                   }
                   if (jjte000 instanceof RuntimeException) {
                     {if (true) throw (RuntimeException)jjte000;}
                   }
                   if (jjte000 instanceof ParseException) {
                     {if (true) throw (ParseException)jjte000;}
                   }
                   {if (true) throw (Error)jjte000;}
    } finally {
                   if (jjtc000) {
                     jjtree.closeNodeScope(jjtn000, true);
                   }
    }
  }

  static final public int type() throws ParseException {
            /*@bgen(jjtree) type */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_11(3)) {
        jj_consume_token(INT);
           jjtree.closeNodeScope(jjtn000, true);
           jjtc000 = false;
          {if (true) return 0;}
      } else if (jj_2_12(3)) {
        jj_consume_token(DOUBLE);
               jjtree.closeNodeScope(jjtn000, true);
               jjtc000 = false;
              {if (true) return 1;}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
    throw new Error("Missing return statement in function");
  }

//循环
  static final public void IfStmt() throws ParseException {
                /*@bgen(jjtree) IfStmt */
  SimpleNode jjtn000 = new SimpleNode(JJTIFSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      jj_consume_token(LPS);
      expression();
      jj_consume_token(RPS);
      Statement();
      if (jj_2_13(3)) {
        jj_consume_token(ELSE);
        Statement();
      } else {
        ;
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void WhileStmt() throws ParseException {
                   /*@bgen(jjtree) WhileStmt */
  SimpleNode jjtn000 = new SimpleNode(JJTWHILESTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LPS);
      expression();
      jj_consume_token(RPS);
      Statement();
    } catch (Throwable jjte000) {
  if (jjtc000) {
    jjtree.clearNodeScope(jjtn000);
    jjtc000 = false;
  } else {
    jjtree.popNode();
  }
  if (jjte000 instanceof RuntimeException) {
    {if (true) throw (RuntimeException)jjte000;}
  }
  if (jjte000 instanceof ParseException) {
    {if (true) throw (ParseException)jjte000;}
  }
  {if (true) throw (Error)jjte000;}
    } finally {
  if (jjtc000) {
    jjtree.closeNodeScope(jjtn000, true);
  }
    }
  }

  static final public void DoWhileStmt() throws ParseException {
                     /*@bgen(jjtree) DoWhileStmt */
  SimpleNode jjtn000 = new SimpleNode(JJTDOWHILESTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(DO);
      Statement();
      jj_consume_token(WHILE);
      jj_consume_token(LPS);
      expression();
      jj_consume_token(RPS);
    } catch (Throwable jjte000) {
    if (jjtc000) {
      jjtree.clearNodeScope(jjtn000);
      jjtc000 = false;
    } else {
      jjtree.popNode();
    }
    if (jjte000 instanceof RuntimeException) {
      {if (true) throw (RuntimeException)jjte000;}
    }
    if (jjte000 instanceof ParseException) {
      {if (true) throw (ParseException)jjte000;}
    }
    {if (true) throw (Error)jjte000;}
    } finally {
    if (jjtc000) {
      jjtree.closeNodeScope(jjtn000, true);
    }
    }
  }

  static final public void ForStmt() throws ParseException {
                 /*@bgen(jjtree) ForStmt */
  SimpleNode jjtn000 = new SimpleNode(JJTFORSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FOR);
      jj_consume_token(LPS);
      ForInitStmt();
      expression();
      jj_consume_token(SEMI);
      AssignStmt();
      jj_consume_token(RPS);
      Statement();
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void DeclareStmt() throws ParseException {
                    /*@bgen(jjtree) DeclareStmt */
   SimpleNode jjtn000 = new SimpleNode(JJTDECLARESTMT);
   boolean jjtc000 = true;
   jjtree.openNodeScope(jjtn000);Token tk;
   String name;
   Symbol tmp;
   int type;
   String value;
    try {
      type = type();
      tk = jj_consume_token(IDENTIFIERS);
    name = tk.image;
    tmp = new Symbol(level,name);
    tmp.setType(type);
    table.registerSymbol(tmp);
      if (jj_2_14(3)) {
        jj_consume_token(ASSIGN);
        value = expression();
                                table.symbolList.get(table.symbolList.size()-1).setValue(value);
      } else {
        ;
      }
      label_2:
      while (true) {
        if (jj_2_15(3)) {
          ;
        } else {
          break label_2;
        }
        jj_consume_token(COMMA);
        tk = jj_consume_token(IDENTIFIERS);
         name = tk.image;
         tmp = new Symbol(level,name);
         tmp.setType(type);
         table.registerSymbol(tmp);
        if (jj_2_16(3)) {
          jj_consume_token(ASSIGN);
          value = expression();
                                   table.symbolList.get(table.symbolList.size()-1).setValue(value);
        } else {
          ;
        }
      }
      jj_consume_token(SEMI);
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  static final public void AssignStmt() throws ParseException {
                    /*@bgen(jjtree) AssignStmt */
  SimpleNode jjtn000 = new SimpleNode(JJTASSIGNSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token tk;
  Symbol tmp;
  String value;
    try {
      tk = jj_consume_token(IDENTIFIERS);
                                 tmp=table.getSymbol(tk.image);
      jj_consume_token(ASSIGN);
      value = expression();
                                      jjtree.closeNodeScope(jjtn000, true);
                                      jjtc000 = false;
                                     tmp.setValue(value);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void ForInitStmt() throws ParseException {
                     /*@bgen(jjtree) ForInitStmt */
  SimpleNode jjtn000 = new SimpleNode(JJTFORINITSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_17(3)) {
        DeclareStmt();
      } else if (jj_2_18(3)) {
        AssignStmt();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void BlockStmt() throws ParseException {
                   /*@bgen(jjtree) BlockStmt */
  SimpleNode jjtn000 = new SimpleNode(JJTBLOCKSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LBRACE);
             level++;
      label_3:
      while (true) {
        if (jj_2_19(3)) {
          ;
        } else {
          break label_3;
        }
        Statement();
      }
      jj_consume_token(RBRACE);
      jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;
         table.deregisterSymbol(level);
         level--;
    } catch (Throwable jjte000) {
      if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public String expression() throws ParseException {
                      /*@bgen(jjtree) expression */
  SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String poly1;
  String poly2=null;
  int type=0;
    try {
      poly1 = polynomial();
      if (jj_2_26(3)) {
        if (jj_2_20(3)) {
          jj_consume_token(EQ);
          poly2 = polynomial();
                                type=1;
        } else if (jj_2_21(3)) {
          jj_consume_token(NEQ);
          poly2 = polynomial();
                                  type=2;
        } else if (jj_2_22(3)) {
          jj_consume_token(GT);
          poly2 = polynomial();
                                 type=3;
        } else if (jj_2_23(3)) {
          jj_consume_token(GET);
          poly2 = polynomial();
                                  type=4;
        } else if (jj_2_24(3)) {
          jj_consume_token(LT);
          poly2 = polynomial();
                                 type=5;
        } else if (jj_2_25(3)) {
          jj_consume_token(LET);
          poly2 = polynomial();
                                  type=6;
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else {
        ;
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            if(poly2==null) {if (true) return poly1;}
            float f1 = Float.valueOf(poly1);
            float f2 = Float.valueOf(poly2);
            switch(type){
                case 0:  {if (true) return poly1;}
                case 1: if(poly1.equals(poly2)) {if (true) return "1";}  else {if (true) return "0";}
                case 2:if(poly1.equals(poly2)) {if (true) return"0";} else {if (true) return"1";}
                case 3:if(f1>f2) {if (true) return"1";} else {if (true) return"0";}
                case 4:if(f1>=f2) {if (true) return"1";}else {if (true) return"0";}
                case 5:if(f1<f2) {if (true) return "1";}else {if (true) return"0";}
                case 6:if(f1<=f2) {if (true) return"1";}else {if (true) return"0";}
                default:{if (true) return poly1;}
            }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String polynomial() throws ParseException {
                      /*@bgen(jjtree) polynomial */
  SimpleNode jjtn000 = new SimpleNode(JJTPOLYNOMIAL);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String term1;
  String term2=null;int type=0;
    try {
      term1 = term();
      if (jj_2_29(3)) {
        if (jj_2_27(3)) {
          jj_consume_token(PLUS);
                             type=1;
        } else if (jj_2_28(3)) {
          jj_consume_token(MINUS);
                                              type=2;
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        term2 = polynomial();
      } else {
        ;
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            if(term2==null) {if (true) return term1;}
            float f1 = Float.valueOf(term1);
        float f2 = Float.valueOf(term2);
        switch(type){
            case 1:float f = f1+f2;{if (true) return String.valueOf(f);}
            case 2:float f0 = f1-f2;{if (true) return String.valueOf(f0);}
            default:{if (true) return term1;}
        }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String term() throws ParseException {
                /*@bgen(jjtree) term */
  SimpleNode jjtn000 = new SimpleNode(JJTTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);String factor1;
  String factor2=null;
  int type=0;
    try {
      factor1 = factor();
      if (jj_2_32(3)) {
        if (jj_2_30(3)) {
          jj_consume_token(DIV);
                                type=1;
        } else if (jj_2_31(3)) {
          jj_consume_token(MUL);
                                               type=2;
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
        factor2 = term();
      } else {
        ;
      }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            if(factor2==null) {if (true) return factor1;}
            float f1=Float.valueOf(factor1);
            float f2=Float.valueOf(factor2);
            switch(type){
                case 1:if(f2==0){if (true) throw new ParseException("The divisor can not be 0.");}else {float f=f1/f2;{if (true) return String.valueOf(f);}}
                case 2:float f0=f1*f2;{if (true) return String.valueOf(f0);}
                default:{if (true) return factor1;}
            }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public String factor() throws ParseException {
                  /*@bgen(jjtree) factor */
  SimpleNode jjtn000 = new SimpleNode(JJTFACTOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);Token tk;
  String name;
    try {
      if (jj_2_36(3)) {
        tk = jj_consume_token(CONSTANT);
                         jjtree.closeNodeScope(jjtn000, true);
                         jjtc000 = false;
                        {if (true) return tk.image;}
      } else if (jj_2_37(3)) {
        jj_consume_token(LPS);
        name = expression();
                                 {if (true) return name;}
        jj_consume_token(RPS);
      } else if (jj_2_38(3)) {
        jj_consume_token(PLUS);
        name = term();
                             jjtree.closeNodeScope(jjtn000, true);
                             jjtc000 = false;
                            {if (true) return name;}
      } else if (jj_2_39(3)) {
        jj_consume_token(MINUS);
        name = term();
                              jjtree.closeNodeScope(jjtn000, true);
                              jjtc000 = false;
                             {if (true) return "-"+name;}
      } else if (jj_2_40(3)) {
        tk = jj_consume_token(IDENTIFIERS);
        if (jj_2_35(3)) {
          jj_consume_token(LPS);
          if (jj_2_34(3)) {
            expression();
            label_4:
            while (true) {
              if (jj_2_33(3)) {
                ;
              } else {
                break label_4;
              }
              jj_consume_token(COMMA);
              expression();
            }
          } else {
            ;
          }
          jj_consume_token(RPS);
        } else {
          ;
        }
          jjtree.closeNodeScope(jjtn000, true);
          jjtc000 = false;
            name = tk.image;
        Symbol tmp = table.getSymbol(name);
        {if (true) return tmp.getValue();}
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
    throw new Error("Missing return statement in function");
  }

  static final public void ReadStmt() throws ParseException {
                 /*@bgen(jjtree) ReadStmt */
SimpleNode jjtn000 = new SimpleNode(JJTREADSTMT);
boolean jjtc000 = true;
jjtree.openNodeScope(jjtn000);Token tk;
    try {
      jj_consume_token(READ);
      jj_consume_token(LPS);
      tk = jj_consume_token(IDENTIFIERS);
         table.getSymbol(tk.image);
      jj_consume_token(RPS);
      jj_consume_token(SEMI);
    } finally {
      if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
  }

  static final public void WriteStmt() throws ParseException {
                   /*@bgen(jjtree) WriteStmt */
  SimpleNode jjtn000 = new SimpleNode(JJTWRITESTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WRITE);
      jj_consume_token(LPS);
      expression();
      jj_consume_token(RPS);
      jj_consume_token(SEMI);
    } catch (Throwable jjte000) {
   if (jjtc000) {
     jjtree.clearNodeScope(jjtn000);
     jjtc000 = false;
   } else {
     jjtree.popNode();
   }
   if (jjte000 instanceof RuntimeException) {
     {if (true) throw (RuntimeException)jjte000;}
   }
   if (jjte000 instanceof ParseException) {
     {if (true) throw (ParseException)jjte000;}
   }
   {if (true) throw (Error)jjte000;}
    } finally {
   if (jjtc000) {
     jjtree.closeNodeScope(jjtn000, true);
   }
    }
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }
